<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context=".Common.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/register_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_btn"
            android:transitionName="transition_back_btn"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight=".95"
                android:fontFamily="@font/acme"
                android:text="@string/proceso_de_registro"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:transitionName="transition_title_text"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="1 / 3 "
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:transitionName="transition_title_text"></TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:background="@drawable/border">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/edit_btn"
                    android:drawableLeft="@drawable/edit_btn"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="@string/nombres"
                    android:inputType="text"
                    android:paddingLeft="6sp"
                    android:paddingBottom="12dp"

                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    app:boxStrokeWidthFocused="2dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/primer_apellido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:background="@drawable/border">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/edit_btn"
                    android:drawableLeft="@drawable/edit_btn"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="@string/primer_apellido"
                    android:inputType="text"
                    android:paddingLeft="6sp"
                    android:paddingBottom="12dp"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    app:boxStrokeWidthFocused="2dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/segundo_apellido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:background="@drawable/border">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/edit_btn"
                    android:drawableLeft="@drawable/edit_btn"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="@string/segundo_apellido"
                    android:inputType="text"
                    android:paddingLeft="6sp"
                    android:paddingBottom="12dp"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    app:boxStrokeWidthFocused="2dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:background="@drawable/border">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/email"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="@string/correo_electronico"
                    android:inputType="text"
                    android:paddingLeft="6sp"
                    android:paddingBottom="12dp"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    app:boxStrokeWidthFocused="2dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:background="@drawable/border">


                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/phone"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="Teléfono"
                    android:inputType="number"
                    android:paddingLeft="6sp"
                    android:paddingBottom="12dp"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    app:boxStrokeWidthFocused="2dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:drawableStart="@drawable/person"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:paddingLeft="6sp"
                android:text="@string/genero"
                android:textColor="@color/black"
                android:textSize="18sp"></TextView>

            <RadioGroup
                android:id="@+id/radiogoup_gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino"
                    android:textSize="18sp" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"></View>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Femenino"
                    android:textSize="18sp" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="20dp"
                android:background="@color/black"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/date"
                android:drawableLeft="@drawable/date"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:paddingLeft="6sp"
                android:text="@string/fecha_de_nacimiento"
                android:textColor="@color/black"
                android:textSize="18sp"></TextView>

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:maxDate="1/31/2021"
                android:spinnersShown="true"></DatePicker>

        </LinearLayout>

        <Button
            android:id="@+id/register_next_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:elevation="5dp"
            android:onClick="callNextRegisterScreen"
            android:text="@string/next_btn"
            android:textColor="@color/white"
            android:transitionName="transition_next_btn"></Button>

    </LinearLayout>

</ScrollView>